Fixed Homepage on Mobile

--- a/backend/frontend/src/Pages/PageStyles/HomeStyles.css
+++ b/backend/frontend/src/Pages/PageStyles/HomeStyles.css
@@ -41,6 +41,10 @@
     animation: floating 3s ease-in-out infinite;
 }
 
+.gameboySml{
+    display: none;
+}
+
 @keyframes floating {
     0% {
         transform: translate(0, 0px);
@@ -71,7 +75,7 @@
 }
 
 .smallText {
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: rgb(96, 96, 96);
     line-height: 1.3;
 }
@@ -148,13 +152,14 @@
     text-align: center;
     font-size: 1.6em;
     font-weight: 500;
-    color: rgb(82, 82, 82);
+    color: rgb(70, 70, 70);
 }
 
 .hText {
     font-size: 1.2em;
     font-weight: 400;
     padding: 5% 2%;
+    color: rgb(56, 56, 56);
 }
 
 @keyframes fadeIn {
@@ -203,6 +208,7 @@
 
     .landing {
         height: 40vh;
+        margin-bottom: -5%;
     }
 
     .smallText {
@@ -215,12 +221,15 @@
 
     .gb {
         background-image: linear-gradient(to bottom right, rgb(242, 213, 245), rgb(228, 236, 244));
+        animation: none;
     }
 
     .play,
     .comment,
     .rate {
         flex-basis: 100%;
+        padding: 3% 0;
+        /* border: solid red 1px; */
     }
 
     .rate {
@@ -228,35 +237,131 @@
         border-bottom: solid rgb(205, 205, 205) 1px;
         border-left: none;
         border-right: none;
+        /* border: solid red 1px; */
+    }
+
+    .keepOver{
+        height: 4vh;
+    }
+
+    .explain{
+        margin-top: -5%;
+    }
+
+    .hmBreak{
+        margin-top: -6%;
+    }
+
+    .explainIcon {
+        height: 62px;
+        width: 62px;
+        margin: 0 auto;
     }
 
 }
 
 @media only screen and (max-width: 650px) {
+
     .gameboy {
         display: none;
+    }
+
+    .gameboySml{
+        display: contents;
+    }
+
+    .gbSml{
+        height: 20%;
+        width: 35%;
+        padding: 5% 20%;
+    }
+
+    .gbSmlContainer{
+        background-image: linear-gradient(to bottom right, rgb(242, 213, 245), rgb(228, 236, 244));
+        border-radius: 3px;
+        margin: 2% 0;
+        margin-bottom: 10%;
     }
 
     .HomeText {
         flex-basis: 100%;
         /* border: solid red 1px; */
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
     }
 
     .landing {
-        display: inline-block;
-        flex-direction: none;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
         height: fit-content;
         margin-top: 10%;
+        margin-bottom: 10%;
+        padding: 5% 0 0 0;
+        /* border: solid red 1px; */
+    }
+
+    .HomeText {
+        flex-direction: none;
+        flex-basis: 100%;
+        width: 100%;
     }
 
     .smallText {
-        font-size: 1.3em;
+        font-size: 1.1em;
+        text-align: center;
+        width: inherit;
+        line-height: 1.5;
+        /* border: solid red 1px; */
     }
 
     .bigText {
-        font-size: 3.3em;
+        font-size: 2.6em;
+        text-align: center;
+        /* border: solid red 1px; */
+    }
+
+    .btn {
+        color: rgb(71, 71, 71);
+        font-size: 1.1em;
+        background-color: rgb(220, 237, 255);
+        border: none;
+        padding: 4% 10%;
+        border-radius: 25px;
+        width: 100%;
+        margin-top: 5%;
+    }
+
+    .keepOver{
+        height: fit-content;
+    }
+
+    .play,
+    .comment,
+    .rate {
+        display: contents;
+    }
+
+    .play{
+        padding-top: 10%;
+    }
+
+    .rate {
+        border-top: none;
+        border-bottom: none;
+        border-left: none;
+        border-right: none;
+        padding: 10% 0;
+        /* border: solid red 1px; */
+    }
+
+    .comment{
+        padding-bottom: 10%;
+    }
+
+    .hmBreak{
+        display: none;
     }
 
 }
